--- a/index.html
+++ b/index.html
@@ -5,18 +5,90 @@
 <link rel="stylesheet" href="css/styles.css">
 <link href='https://fonts.googleapis.com/css?family=Slabo+27px&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 
+<script src="js/jquery.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/gallery.js"></script>
+<script src="js/albums.js"></script>
+
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width" />
   <title>Vidovdanija</title>
   <header class="container-fluid"> 
-<h1>Vidovdanija</h1>
+<h1><a href="index.html" id="vidovdanija">Vidovdanija</a></h1>
 <h3>Welcome to the place of nice photography</h3>
+
+<div class="container">
+<nav id="header-nav" class="navbar navbar-default">
+
+<div class="navbar-brand visible-xs">
+            <a href="index.html">Home</a>
+          </div>
+
+      <ul class="row nav navbar-nav hidden-xs">
+					<li class="active col-md-3"> <a href="index.html"> Home </a> </li>
+					<li class="col-md-3"> <a href="about.html"> About </a> </li>
+					<li class="col-md-3"> <a href="gallery.html"> Gallery </a> </li>
+					<li class="col-md-3"> <a href="contact.html"> Contact </a> </li>
+				</ul>
+    
+
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          </div>
+        
+<div class="container">        
+<div id="collapsable-nav" class="collapse navbar-collapse ">
+           <ul id="nav-list" class="nav navbar-nav navbar-right visible-xs">
+            <li>
+              <a href="about.html">
+                <span></span><br class=""> About</a>
+            </li>
+            <li>
+              <a href="gallery.html">
+                <span></span><br class="visible-xs"> Gallery</a>
+            </li>
+            <li>
+              <a href="contact.html">
+                <span></span><br class="visible-xs"> Contact</a>
+            </li>
+          </ul><!-- #nav-list -->
+        </div><!-- .collapse .navbar-collapse -->
+      </div><!-- .container -->
+    </nav><!-- #header-nav -->
   </header>
 
+
 </head>
+
 <body>
-<div>lorem ipsum</div>
+
+<div class="container">
+    <div id="main-tile" class="row">
+			<div class="col-xs-12">
+				<img id="bigImage" class="large-img" src="images/wide/image_7.jpg"/> 
+			</div>
+		</div>
+
+
+<div class="container">
+	<div id="home-tiles" class="row">
+			<div class="col-xs-6">
+				<img id="smallImage" class "small-img" src="images/wide/image_6.jpg"/>
+				</div>
+
+			<div class="col-xs-6">
+				<img id="smallImage" class "small-img" src="images/wide/image_4.jpg"/>
+				</div>
+			</div>
+</div>
+</div>
+
 </body>
-<footer class="container-fluid">
+		
+<footer>
 </footer>
 </html>
 
