--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <div class="container">
     <div id="main-tile" class="row">
 			<div class="col-xs-12">
-				<img id="bigImage" class="large-img" src="images/wide/Image_7.jpg"/> 
+				<img id="bigImage" class="large-img" src="images/wide/Image_7.jpg" alt="image"/> 
 			</div>
 		</div>
 
@@ -76,11 +76,11 @@
 <div class="container">
 	<div id="home-tiles" class="row">
 			<div class="col-xs-6">
-				<img id="smallImage" class "small-img" src="images/wide/Image_6.jpg"/>
+				<img id="smallImage" class "small-img" src="images/wide/Image_6.jpg" alt="image"/>
 				</div>
 
 			<div class="col-xs-6">
-				<img id="smallImage" class "small-img" src="images/wide/Image_4.jpg"/>
+				<img id="smallImage" class "small-img" src="images/wide/Image_4.jpg" alt="image"/>
 				</div>
 			</div>
 </div>
