--- a/about.html
+++ b/about.html
@@ -25,8 +25,8 @@
           </div>
 
       <ul class="row nav navbar-nav hidden-xs">
-					<li class="active col-md-3"> <a href="index.html"> Home </a> </li>
-					<li class="col-md-3"> <a href="about.html"> About </a> </li>
+					<li class="col-md-3"> <a href="index.html"> Home </a> </li>
+					<li class="active col-md-3"> <a href="about.html"> About </a> </li>
 					<li class="col-md-3"> <a href="gallery.html"> Gallery </a> </li>
 					<li class="col-md-3"> <a href="contact.html"> Contact </a> </li>
 				</ul>
@@ -65,26 +65,7 @@
 
 <body>
 
-<div class="container">
-    <div id="main-tile" class="row">
-			<div class="col-xs-12">
-				<img id="bigImage" class="large-img" src="images/standard/Image_13.jpg" alt="image"/> 
-			</div>
-		</div>
-    </div>
 
-
-<div class="container">
-	<div id="home-tiles" class="row">
-			<div class="col-xs-6">
-				<img id="smallImage" class "small-img" src="images/wide/Image_7.jpg" alt="image"/>
-				</div>
-
-			<div class="col-xs-6">
-				<img id="smallImage" class "small-img" src="images/wide/Image_4.jpg" alt="image"/>
-				</div>
-			</div>
-    </div>
 
 
 </body>
