--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <div class="container">
     <div id="main-tile" class="row">
 			<div class="col-xs-12">
-				<img id="bigImage" class="large-img" src="images/standard/Image_13.jpg" alt="image"/> 
+				<img id="bigImage" class="large-img" src="images/standard/Image_13.jpg" alt="naslovna"/> 
 			</div>
 		</div>
     </div>
