--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <div class="container">
     <div id="main-tile" class="row">
 			<div class="col-xs-12">
-				<img id="bigImage" src="images/standard/Image_13.jpg" alt="naslovna"/> 
+				<img id="bigImage" src="images/standard/Image_13.JPG" alt="naslovna"/> 
 			</div>
 		</div>
     </div>
