--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
 <nav id="header-nav" class="navbar navbar-default">
 
 <div class="navbar-brand visible-xs" id="home">
-            <a href="index.html">Home</a>
+            <span class="glyphicon glyphicon-home"></span></a>
           </div>
 
       <ul class="row nav navbar-nav hidden-xs">
@@ -44,17 +44,17 @@
            <ul id="nav-list" class="nav navbar-nav navbar-right visible-xs">
             <li>
               <a href="about.html">
-                <span></span><br class="visible-xs"> About</a>
+                <span class="glyphicon glyphicon-user"></span><br> About</a>
             </li>
             <li>
               <a href="gallery.html">
-                <span></span><br class="visible-xs"> Gallery</a>
+                <span class="glyphicon glyphicon-camera"></span><br> Gallery</a>
             </li>
             <li>
               <a href="contact.html">
-                <span></span><br class="visible-xs"> Contact</a>
+                <span class="glyphicon glyphicon-envelope"></span><br> Contact</a>
             </li>
-          </ul><!-- #nav-list -->
+          </ul>
         </div><!-- .collapse .navbar-collapse -->
       </div><!-- .container -->
     </nav><!-- #header-nav -->
@@ -83,7 +83,8 @@
 <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
 </div>
 </div>
-</div>
+
+<div class="text-center" id="copyright">&copy; Copyright <span>Vidovdanija 2016 </span></div>
 </div>
 
 
