--- a/about.html
+++ b/about.html
@@ -21,6 +21,7 @@
 <nav id="header-nav" class="navbar navbar-default">
 
 <div class="navbar-brand visible-xs" id="home">
+            <a href="index.html">
             <span class="glyphicon glyphicon-home"></span></a>
           </div>
 
