--- a/index.html
+++ b/index.html
@@ -6,14 +6,20 @@
 <link href='https://fonts.googleapis.com/css?family=Slabo+27px&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 
 <script src="js/jquery.min.js"></script>
+<script src="js/bootstrap.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/gallery.js"></script>
 <script src="js/albums.js"></script>
+<script src="js/script.js"></script>
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width" />
   <title>Vidovdanija</title>
-  <header class="container-fluid"> 
+  
+</head>
+<body>
+
+<header id="header1" class="container-fluid"> 
 <h1><a href="index.html" id="vidovdanija">Vidovdanija</a></h1>
 <h3>Welcome to the place of nice photography</h3>
 
@@ -33,7 +39,7 @@
 				</ul>
     
 
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+          <button id="navbarToogle" type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -63,9 +69,7 @@
   </header>
 
 
-</head>
-
-<body>
+</body>
 
 <div class="container">
     <div id="main-tile" class="row">
@@ -79,19 +83,19 @@
 <div class="container">
 	<div id="home-tiles" class="row">
 			<div class="col-xs-6">
-				<img id="smallImage" src="images/wide/Image_7.jpg" alt="image"/>
+				<img id="smallImage1" src="images/wide/Image_7.jpg" alt="image"/>
 				</div>
 
 			<div class="col-xs-6">
-				<img id="smallImage" src="images/wide/Image_4.jpg" alt="image"/>
+				<img id="smallImage2" src="images/wide/Image_4.jpg" alt="image"/>
 				</div>
 			</div>
     </div>
 
 
-</body>
+
 		
-<footer>
+<footer id="foot">
 <div class="container">
 <div class="row">
 <div class="col-sm-4 col-xs-12">
@@ -110,6 +114,8 @@
 </div>
 
 </footer>
+
+</body>
 </html>
 
   
