--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
+         
+          </nav>
           </div>
         
 <div class="container">        
@@ -62,35 +64,39 @@
                 <span class="glyphicon glyphicon-envelope"></span><br> Contact</a>
             </li>
           </ul><!-- #nav-list -->
-        </div><!-- .collapse .navbar-collapse -->
-      </div><!-- .container -->
-    </nav>
-  </div><!-- #header-nav -->
+        </div>
+        </div>
   </header>
 
 
-</body>
+
 
 <div class="container">
     <div id="main-tile" class="row">
-			<div class="col-xs-12">
-				<img id="bigImage" src="images/standard/Image_13.JPG" alt="naslovna"/> 
-			</div>
-		</div>
+      <div class="col-xs-12">
+        <img id="bigImage" src="images/standard/Image_13.JPG" alt="naslovna"/> 
+      </div>
+    </div>
     </div>
 
 
 <div class="container">
-	<div id="home-tiles" class="row">
-			<div class="col-xs-6">
-				<img id="smallImage1" src="images/wide/Image_7.jpg" alt="image"/>
-				</div>
+  <div id="home-tiles" class="row">
+      <div class="col-xs-12 col-sm-6">
+      <a href="gallery.html"> <div id="imageone">
+        <span> Gallery </span>
+        </div> </a>
+        </div>
 
-			<div class="col-xs-6">
-				<img id="smallImage2" src="images/wide/Image_4.jpg" alt="image"/>
-				</div>
-			</div>
-    </div>
+
+
+      <div class="col-xs-12 col-sm-6">
+        <a href="gallery.html"> <div id="imagetwo"> 
+        <span> Summer Album </span>
+        </div> </a>
+      </div>
+      </div>
+      </div>
 
 
 
