--- a/index.html
+++ b/index.html
@@ -105,18 +105,22 @@
 <div class="container">
 <div class="row">
 <div class="col-sm-4 col-xs-12">
-<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+<p> "Vidovdanija completely changed my life. These photos made me realize how life is beutiful, and how we should seize the day. Thank You, Vidovdan. You are awesome!" <br><br><span id="test"> Aleksandra Blagojevic, ethnologist </span></p> 
+<hr class="visible-xs">
 </div>
 
 <div class="col-sm-4 col-xs-12">
-<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+<p>"I was close to commiting suicide, but then I saw the light! It was Vidovdan. He came to me like same angel, and helped me. He tought me how to take great photos, which got me out of the trouble, and made me feel alive again. He is my savior!"<br><br><span id="test"> Mirjana Batizic, student </span></p>
+<hr class="visible-xs">
 </div>
+
 <div class="col-sm-4 col-xs-12">
-<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+<p>"He is like a fenomenon to me. This site that he made all by himself - amazing. We should all learn from him, and respect this fellow." <br><br><span id="test"> Senad Bulic, IT expert </span></p>
+<hr class="visible-xs">
 </div>
 </div>
 
-<div class="text-center" id="copyright">&copy; Copyright <span>Vidovdanija 2016 </span></div>
+<div class="text-center" id="copyright"> <a href="index.html"> &copy; Copyright <span>Vidovdanija 2016 </span> </a></div>
 </div>
 
 </footer>
