--- a/contact.html
+++ b/contact.html
@@ -23,6 +23,8 @@
 <div class="navbar-brand visible-xs" id="home">
             <a href="index.html">
             <span class="glyphicon glyphicon-home"></span></a>
+            <a href="contact.html" class="active" id="headline">
+            <span> Contact </span></a>
           </div>
 
       <ul class="row nav navbar-nav hidden-xs">
