--- a/gallery.html
+++ b/gallery.html
@@ -23,6 +23,9 @@
 <div class="navbar-brand visible-xs" id="home">
             <a href="index.html">
             <span class="glyphicon glyphicon-home"></span></a>
+            <a href="gallery.html" class="active" id="headline">
+            <span> Gallery</span></a>
+          
           </div>
 
       <ul class="row nav navbar-nav hidden-xs">
